--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 main {
@@ -47,12 +48,13 @@ main {
   flex-wrap: wrap;
   align-items: center;
   margin: 10px;
-  width: 80%;
+  width: 75%;
 }
 
 .menu {
-  width: 20%;
+  width: 25%;
   padding: 10px;
+  margin: 10px 0 0 10px;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -141,4 +143,19 @@ input[type="text"]:focus {
 
 .card__toolbar a:hover {
   background-color: #550077;
+}
+
+@media (max-width: 767px) {
+  .container {
+    flex-direction: column;
+  }
+
+  .menu {
+    width: 98%;
+    margin: 0 auto;
+  }
+
+  .friends-list {
+    width: 98%;
+  }
 }
